# WiFo

./: .gitignore  README.md  pyproject.toml  pytest.ini
configs/: README.md  base_training.yaml  inference.yaml  quick_test.yaml
configs/evaluation/: zero_shot.yaml
doc/: system_design.md  training_implementation.md
openspec/: project.md
openspec/changes/add-config-management/: design.md  proposal.md  tasks.md
openspec/changes/add-config-management/specs/config-management/: spec.md
openspec/changes/add-pytorch-lightning-training/: proposal.md  tasks.md
openspec/changes/add-pytorch-lightning-training/specs/pytorch-lightning-training/: spec.md
scripts/: convert_weights.py
src/: README.md  data_module.py  dataloader.py  eval.py  lightning_module.py  main.py  model.py  train.py  train_lightning.py
src/config/: __init__.py  loader.py  parser.py  validator.py
src/data/: __init__.py  data_module.py  dataloader.py
src/models/: __init__.py  embed.py  model.py
src/training/: __init__.py  lightning_module.py
src/utils/: __init__.py
