[project]
name = "wifo"
version = "0.1.0"
description = "WiFi CSI Prediction"
requires-python = ">=3.9"
dependencies = [
    "torch==2.4.1",
    "numpy==1.26.4",
    "scikit-learn==1.3.2",
    "setproctitle==1.3.3",
    "timm==0.9.2",
    "einops>=0.8.1",
    "h5py>=3.14.0",
    "hdf5storage>=0.1.19",
    "tensorboard>=2.20.0",
    "lightning>=2.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "rich>=14.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

# Configure PyTorch to use CUDA 12-enabled version from official source
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
